--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,123 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@layer base {
+	:root {
+		/* --color-<colorname>: <red> <green> <blue>; */
+		--color-primary: 59 93 80;
+		--color-secondary: 220 229 228;
+	}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+	html {
+		scroll-behavior: smooth;
+	}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	header,
+	footer,
+	section {
+		@apply px-container;
+	}
+
+	section {
+		@apply py-10;
+	}
+
+	body {
+		@apply font-sans overflow-x-hidden;
+	}
+
+	/* ------------ typography starts ------------ */
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		@apply mb-2;
+	}
+
+	h1 {
+		@apply text-heading1;
+	}
+	h2 {
+		@apply text-heading2;
+	}
+	h3 {
+		@apply text-heading3;
+	}
+	h4 {
+		@apply text-heading4;
+	}
+	h5 {
+		@apply text-heading5;
+	}
+	h6 {
+		@apply text-heading6;
+	}
+
+	p.subtitle1 {
+		@apply text-subtitle1;
+	}
+	p.subtitle2 {
+		@apply text-subtitle2;
+	}
+	p {
+		@apply text-body2;
+	}
+	p.small,
+	p.caption {
+		@apply text-caption1;
+	}
+	p.sm {
+		@apply text-caption2;
+	}
+	p.large,
+	p.body1 {
+		@apply text-body1;
+	}
+
+	button,
+	a {
+		@apply text-btn;
+	}
+	/* ------------ typography ends ------------ */
+
+	input,
+	textarea,
+	select {
+		@apply block w-full rounded-md border-0 outline-none py-2 px-3;
+	}
+
+	input[type="checkbox"],
+	input[type="radio"] {
+		@apply border-none w-max shadow-none accent-primary ring-0;
+	}
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+	input::-webkit-outer-spin-button,
+	input::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
+	/* Works for Firefox */
+	input[type="number"] {
+		-moz-appearance: textfield;
+	}
+	/* ------------------- hide scrollbar starts ------------------- */
+	/* Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+	.no-scrollbar::-webkit-scrollbar-track {
+		background-color: transparent;
+	}
+	.no-scrollbar {
+		-ms-overflow-style: none;
+		/* IE and Edge */
+		scrollbar-width: none;
+		/* Firefox */
+	}
+	/* ------------------- hide scrollbar ends ------------------- */
 }
