most of changes done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,8 @@
 		/* --color-<colorname>: <red> <green> <blue>; */
 		--color-primary: 59 93 80;
 		--color-secondary: 220 229 228;
-		--color-blue: 6 78 164 ;
+		--color-blue: 16 27 57 ;
+		--color-darkblue: 12 15 25 ;
 		--color-red: 214 50 40 ;
 		--color-white: 255 255 255;
 		--color-black: 0 0 0;
