--- a/src/components/EcomServices/styles.module.css
+++ b/src/components/EcomServices/styles.module.css
@@ -1,5 +1,5 @@
 .tabContainer {
-    @apply w-full flex gap-4  max-md:px-0 max-lg:flex-col ;
+    @apply w-full flex gap-4  max-md:px-0 max-md:flex-col ;
   
     & > .container {
       @apply relative flex flex-col gap-4 h-max max-lg:flex-1;
@@ -19,7 +19,7 @@
   
   
   .tab {
-      @apply relative text-3xl font-bold;
+      @apply relative text-xl lg:text-3xl font-bold;
       &[aria-selected="true"]::after {
           @apply bg-blue-600;
       }
@@ -32,7 +32,7 @@
   .contentdiv{
     @apply flex max-lg:flex-1 w-full;
     & > .tabsContent{
-      @apply text-subtitle1
+      @apply md:text-subtitle1
     } 
   }
   
