--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,11 @@
 
 		--color-button:72 97 252;
 		--color-second:255 219 59;
+		--color-background1:224 224 224;
+		--color-background2:2 19 43;
+		--color-background3:23 15 27;
+		--color-background4:13 20 39;
+		--color-background5:234 236 235;
 	}
 
 	.dark {
