--- a/src/components/MobileServices/style.module.css
+++ b/src/components/MobileServices/style.module.css
@@ -19,7 +19,7 @@
 
 
 .tab {
-    @apply relative lg:text-3xl max-md:text-heading6 font-bold;
+    @apply relative md:text-3xl max-md:text-2xl font-bold;
     &[aria-selected="true"]::after {
         @apply bg-blue-600;
     }
