--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,13 +34,17 @@
 
 		--radius: 0.5rem;
 
-		--color-button:72 97 252;
-		--color-second:255 219 59;
-		--color-background1:224 224 224;
-		--color-background2:2 19 43;
-		--color-background3:23 15 27;
-		--color-background4:13 20 39;
-		--color-background5:234 236 235;
+		--color-blue:6 78 164;
+		--color-yellow:255 219 59;
+		--color-gray:224 224 224;
+		--color-darkblue:2 19 43;
+		--color-darkblue1:23 15 27;
+		--color-darkblue2:13 20 39;
+		--color-gray1:234 236 235;
+		--color-lightpink:255 250 227;
+		--color-lightblue:233 243 255;
+		--color-textgray:178 176 178;
+
 	}
 
 	.dark {
