--- a/src/components/ImageAccordian/styles.css
+++ b/src/components/ImageAccordian/styles.css
@@ -7,7 +7,7 @@
 }
 
 .image-accordion-item p {
-  @apply text-white text-xl  font-medium ;
+  @apply text-background text-xl  font-medium ;
 }
 
 .image-accordion-item.active {
@@ -19,11 +19,11 @@
 }
 
 .image-accordion-item .content1 {
-  @apply absolute text-xl lg:p-5 p-4 lg:w-[600px] lg:h-[600px] lg:bottom-0 lg:text-3xl font-bold text-white lg:-rotate-90;
+  @apply absolute text-xl lg:p-5 p-4 lg:w-[600px] lg:h-[600px] lg:bottom-0 lg:text-3xl font-bold text-background lg:-rotate-90;
 }
 
 .image-accordion-item.active .content1 {
-  @apply lg:p-8 max-lg:p-2 rotate-0 absolute text-xl top-0 lg:text-4xl lg:font-bold text-white;
+  @apply lg:p-8 max-lg:p-2 rotate-0 absolute text-xl top-0 lg:text-4xl lg:font-bold text-background;
 }
 
 .image-accordion-item.active .content {
