color and text changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,7 @@
 		--color-lightpink:255 250 227;
 		--color-lightblue:233 243 255;
 		--color-textgray:178 176 178;
+		--color-skyblue:33 141 228;
 
 	}
 
