--- a/src/components/EcomServices/styles.module.css
+++ b/src/components/EcomServices/styles.module.css
@@ -19,7 +19,7 @@
   
   
   .tab {
-      @apply relative text-xl lg:text-3xl font-bold;
+      @apply relative text-heading5;
       &[aria-selected="true"]::after {
           @apply bg-blue;
       }
@@ -32,7 +32,7 @@
   .contentdiv{
     @apply flex max-lg:flex-1 w-full;
     & > .tabsContent{
-      @apply md:text-subtitle1
+      @apply text-subtitle3
     } 
   }
   
