--- a/src/components/ImageAccordian/styles.css
+++ b/src/components/ImageAccordian/styles.css
@@ -7,7 +7,7 @@
 }
 
 .image-accordion-item p {
-  @apply text-background text-xl  font-medium ;
+  @apply text-background text-subtitle1 ;
 }
 
 .image-accordion-item.active {
@@ -23,7 +23,7 @@
 }
 
 .image-accordion-item.active .content1 {
-  @apply lg:p-8 max-lg:p-2 rotate-0 absolute text-xl top-0 lg:text-4xl lg:font-bold text-background;
+  @apply lg:p-8 max-lg:p-2 rotate-0 absolute text-heading4 top-0  text-background;
 }
 
 .image-accordion-item.active .content {
