home page blue color change

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,7 @@
 		--color-lightblue:233 243 255;
 		--color-textgray:178 176 178;
 		--color-skyblue:33 141 228;
+		--color-specialblue:30 61 96;
 
 	}
 
