--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,6 +46,7 @@
 		--color-textgray:178 176 178;
 		--color-skyblue:33 141 228;
 		--color-specialblue:30 61 96;
+		--color-offwhite: 0 0% 80%;
 
 	}
 
