--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,116 +3,133 @@
 @tailwind utilities;
 
 @layer base {
-	:root {
-		--background: 0 0% 100%;
-		--foreground: 0 0% 3.9%;
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 0 0% 3.9%;
 
-		--card: 0 0% 100%;
-		--card-foreground: 0 0% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 3.9%;
 
-		--popover: 0 0% 100%;
-		--popover-foreground: 0 0% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 3.9%;
 
-		--primary: 0 0% 0%;
-		--primary-foreground: 0 0% 98%;
+    --primary: 0 0% 0%;
+    --primary-foreground: 0 0% 98%;
 
-		--secondary: 0 0% 96.1%;
-		--secondary-foreground: 0 0% 9%;
+    --secondary: 0 0% 96.1%;
+    --secondary-foreground: 0 0% 9%;
 
-		--muted: 0 0% 96.1%;
-		--muted-foreground: 0 0% 45.1%;
+    --muted: 0 0% 96.1%;
+    --muted-foreground: 0 0% 45.1%;
 
-		--accent: 0 0% 96.1%;
-		--accent-foreground: 0 0% 9%;
+    --accent: 0 0% 96.1%;
+    --accent-foreground: 0 0% 9%;
 
-		--destructive: 0 84.2% 60.2%;
-		--destructive-foreground: 0 0% 98%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
 
-		--border: 0 0% 89.8%;
-		--input: 0 0% 89.8%;
-		--ring: 0 0% 3.9%;
+    --border: 0 0% 89.8%;
+    --input: 0 0% 89.8%;
+    --ring: 0 0% 3.9%;
 
-		--radius: 0.5rem;
+    --radius: 0.5rem;
 
-		--color-blue:6 78 164;
-		--color-yellow:255 219 59;
-		--color-gray:224 224 224;
-		--color-darkblue:2 19 43;
-		--color-darkblue1:23 15 27;
-		--color-darkblue2:13 20 39;
-		--color-gray1:234 236 235;
-		--color-lightpink:255 250 227;
-		--color-lightblue:233 243 255;
-		--color-textgray:178 176 178;
-		--color-skyblue:33 141 228;
-		--color-specialblue:30 61 96;
-		--color-offwhite: 0 0% 80%;
+    --color-blue: 6 78 164;
+    --color-yellow: 255 219 59;
+    --color-gray: 224 224 224;
+    --color-darkblue: 2 19 43;
+    --color-darkblue1: 23 15 27;
+    --color-darkblue2: 13 20 39;
+    --color-gray1: 234 236 235;
+    --color-lightpink: 255 250 227;
+    --color-lightblue: 233 243 255;
+    --color-textgray: 178 176 178;
+    --color-skyblue: 33 141 228;
+    --color-specialblue: 30 61 96;
+    --color-offwhite: 0 0% 80%;
+  }
 
-	}
+  .dark {
+    --background: 0 0% 3.9%;
+    --foreground: 0 0% 98%;
 
-	.dark {
-		--background: 0 0% 3.9%;
-		--foreground: 0 0% 98%;
+    --card: 0 0% 3.9%;
+    --card-foreground: 0 0% 98%;
 
-		--card: 0 0% 3.9%;
-		--card-foreground: 0 0% 98%;
+    --popover: 0 0% 3.9%;
+    --popover-foreground: 0 0% 98%;
 
-		--popover: 0 0% 3.9%;
-		--popover-foreground: 0 0% 98%;
+    --primary: 0 0% 98%;
+    --primary-foreground: 0 0% 9%;
 
-		--primary: 0 0% 98%;
-		--primary-foreground: 0 0% 9%;
+    --secondary: 0 0% 14.9%;
+    --secondary-foreground: 0 0% 98%;
 
-		--secondary: 0 0% 14.9%;
-		--secondary-foreground: 0 0% 98%;
+    --muted: 0 0% 14.9%;
+    --muted-foreground: 0 0% 63.9%;
 
-		--muted: 0 0% 14.9%;
-		--muted-foreground: 0 0% 63.9%;
+    --accent: 0 0% 14.9%;
+    --accent-foreground: 0 0% 98%;
 
-		--accent: 0 0% 14.9%;
-		--accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
 
-		--destructive: 0 62.8% 30.6%;
-		--destructive-foreground: 0 0% 98%;
-
-		--border: 0 0% 14.9%;
-		--input: 0 0% 14.9%;
-		--ring: 0 0% 83.1%;
-	}
+    --border: 0 0% 14.9%;
+    --input: 0 0% 14.9%;
+    --ring: 0 0% 83.1%;
+  }
 }
 
 @layer base {
-	* {
-		@apply border-border;
-	}
-	body {
-		@apply bg-background text-foreground;
-	}
-	html {
-		scroll-behavior: smooth;
-	  }
-	
-	  header,
-	  footer,
-	  section {
-		@apply px-container ;
-	  }
-	
-	  section {
-		@apply py-10;
-	  }
-	
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+  html {
+    scroll-behavior: smooth;
+  }
+
+  header,
+  footer,
+  section {
+    @apply px-container;
+  }
+
+  section {
+    @apply py-10;
+  }
+}
+.hiring-section {
+  opacity: 0;
+  transform: translateY(50px);
+  animation: hiring linear forwards;
+  animation-timeline: view();
+  animation-range: 0px 200px;
+  animation-duration: 2s;
+}
+@keyframes hiring {
+  0%,
+  70% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(-50px);
+    /* background-color: aqua; */
+  }
 }
 .no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-  .no-scrollbar::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
-  .no-scrollbar {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
-  }
-  
+  display: none;
+}
+.no-scrollbar::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
