--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,6 +101,60 @@
     @apply py-10;
   }
 }
+@layer components {
+  .prose {
+    & ol {
+      @apply list-decimal list-inside;
+    }
+    & ul {
+      @apply list-square list-inside;
+    }
+    /* & li {
+      @apply mb-4;
+    } */
+    & ul li {
+      text-indent: -1.4em;
+      padding-left: 1.8em;
+    }
+    & ol li {
+      text-indent: -1em;
+      padding-left: 1.4em;
+    }
+    & h2 {
+      @apply text-3xl  mb-4;
+    }
+    & h3 {
+      @apply text-2xl mb-4;
+    }
+    & h4 {
+      @apply text-xl mb-4;
+    }
+    & p {
+      @apply text-lg mb-4;
+    }
+    table,
+    tr,
+    td,
+    th {
+      border: 1px solid #000;
+    }
+    table {
+      @apply w-full;
+    }
+    th {
+      @apply p-3 text-center;
+    }
+    td {
+      @apply p-3 text-center;
+    }
+    summary::after {
+      content: "Ver mais";
+    }
+    details[open] summary::after {
+      content: "Ver menos";
+    }
+  }
+}
 .hiring-section {
   opacity: 0;
   transform: translateY(50px);
