--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -144,6 +144,18 @@
   a {
     @apply text-btn;
   }
+
+  & ol {
+    @apply list-outside;
+  }
+
+  & ol li,
+  ul li {
+    @apply mb-4;
+  }
+  & ul {
+    @apply list-outside marker:text-blue;
+  }
 }
 @layer components {
   .prose {
