--- a/src/components/builder-io/BiTab/tabstyle.module.css
+++ b/src/components/builder-io/BiTab/tabstyle.module.css
@@ -1,5 +1,5 @@
 .tabContainer {
-  @apply w-full flex gap-16 max-md:px-0 max-md:flex-col;
+  @apply w-full flex gap-4 md:gap-16 max-md:px-0 max-md:flex-col;
 
   & > .container {
     @apply relative flex flex-col gap-2 h-max max-lg:flex-1 w-[50%];
