file upload custom component created

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -242,3 +242,11 @@
   scrollbar-width: none;
   /* Firefox */
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-text-fill-color: #fff !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
