--- a/src/components/builder-io/BiImageSwiper/imageSwiper.module.css
+++ b/src/components/builder-io/BiImageSwiper/imageSwiper.module.css
@@ -27,7 +27,7 @@
 }
 
 .contentActive {
-  @apply opacity-100 visible animate-fadeinup duration-1000;
+  @apply opacity-100 visible animate-fadeinup duration-1000 text-white;
 }
 
 .imageAccordionItemImage {
